--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 This is the body of my page!
 Some changes on my page.
 Another change from the web.
-
+  Here we have another change on the web that should confliect with local change.
 </body>
 </html>
