I wrote one line which should be in conflict with the online

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 This is the body of my page!
 Some changes on my page.
 Another change from the web.
+This is to test the graphical Git feature.
 
 </body>
 </html>
